[package]
authors = ["Clément Bizeau <clement.bizeau4@gmail.com>"]
categories = ["embedded", "no-std"]
description = "A template for building applications for ARM Cortex-M microcontrollers"
keywords = ["arm", "cortex-m", "template"]
license = "MIT OR Apache-2.0"
name = "i2c-test"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.0"
cortex-m-rt = "0.6.0"
cortex-m-semihosting = "0.3.0"
panic-semihosting = "0.3.0"
f3 = { path = "../f3"}


[profile.release]
codegen-units = 1 # better optimizations
debug = true
lto = true # better optimizations
